feat: add the commit message standard

--- a/docs/ide/0.md
+++ b/docs/ide/0.md
@@ -1,4 +1,5 @@
-## IDE
+# IDE
+开发环境和开发规范的文档。
 
 ### Git
 + [Git 命令——基础](git-0.md)
@@ -9,3 +10,6 @@
 
 ### Other
 + [travisCI 使用](travisCI-0.md)
+
+### Standard
++ [commit 规范](standard/commit_message.md)
