feat: update git about
refactor: delete zero.sh

--- a/docs/ide/0.md
+++ b/docs/ide/0.md
@@ -2,8 +2,8 @@
 开发环境和开发规范的文档。
 
 ### Git
-+ [Git 命令——基础](git-0.md)
-+ [Git 命令](git-1.md)
++ [Git 命令——基础](git-1.md)
++ [Git 命令（二）](git-2.md)
 
 ### Shell
 + [Shell](shell-0.md)
